--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server:build": "tsc -p tsconfig.server.json",
+    "server:start": "node dist-server/server.js",
+    "run": "npm run build && npm run server:build && npm run server:start"
   },
   "dependencies": {
+    "@fastify/static": "^8.3.0",
     "@tailwindcss/vite": "^4.1.18",
+    "fastify": "^5.7.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
